# openresource

./: ..env.un~  ..gitignore.un~  .compose.yaml.un~  .env.example  .env~  .gitignore  .gitignore~  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  openapi.yaml  package.json
backend/: .README.md.un~  .env.example  .gitignore  Dockerfile  README.md  README.md~  diesel.toml
backend/database/: .README.md.un~  .env.example  Dockerfile  README.md~  db-init.sh  dbinit.sh  finance.sql  projects.sql  schedules.sql  southernbreeze.sql
backend/database/migrations/001_openresource/: down.sql
backend/database/migrations/002_authentication/: up.sql
backend/migrations/001_openresource/: down.sql  up.sql
backend/migrations/002_authentication/: down.sql  up.sql
backend/migrations/002_southernbreeze/: up.sql
backend/migrations/003_southernbreeze/: down.sql  up.sql
backend/src/: config.rs
backend/src/domain/models/: customer.rs  product.rs
backend/src/handlers/customers/: create_customer.rs
backend/src/infra/repositories/: customer_repository.rs
database/: authentication.sql  projects.sql  reports.sql  schedules.sql  southernbreeze.sql  worker.sql
docs/: NOTES.md  PROJECT.md
frontend/: ..gitignore.un~  .gitignore~  Dockerfile  README.md  package-lock.json  package.json
src/: config.rs  main.rs
testme/: Cargo.toml  README.md
testme/.openapi-generator/: FILES
testme/src/: models.rs
testme/src/apis/: item.rs  location.rs  mod.rs  user.rs
testme/src/server/: mod.rs
util/: openresource.service
website/: README.md
